# IPD_project_ros_ws

./: README.md
arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_moveit_config/config/: chomp_planning.yaml  gazebo_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros2_controllers.yaml  sabse_final_robo_dusra.gazebo_ros2_control.xacro  sabse_final_robo_dusra.ros2_control.xacro  sabse_final_robo_dusra.srdf
arm_moveit_config/launch/: demo.launch.py  demo_controller.launch.py  gazebo_simulation.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_moveit_config/worlds/: empty.world
sabse_final_robo_dusra_control/: CMakeLists.txt  package.xml
sabse_final_robo_dusra_control/config/: sabse_final_robo_dusra_controllers.yaml  sabse_final_robo_dusra_ros2_control.xacro
sabse_final_robo_dusra_control/launch/: controllers.launch.py
sabse_final_robo_dusra_control/scripts/: test_joint_control.py
sabse_final_robo_dusra_description/: package.xml  setup.cfg  setup.py
sabse_final_robo_dusra_description/config/: display.rviz
sabse_final_robo_dusra_description/launch/: display.launch.py  gazebo.launch.py
sabse_final_robo_dusra_description/meshes/: Antebrazo__4__1.stl  Barra1_1.stl  Barra2_1.stl  Base_de_la_garra_1.stl  Brazo_1.stl  Eje_Central_1.stl  Engranaje1_1.stl  Engranaje2_1.stl  Muneca_1.stl  Pata1_1.stl  Pata2_1.stl  Pata3_1.stl  Pata4_1.stl  Pata5_1.stl  Pinza1_1.stl  Pinza2_1.stl  Seguro_de_servomotor_1.stl  Tapa_Base_1.stl  Tapa_Eje_1.stl  Tapa_garra_1.stl  base_link.stl
sabse_final_robo_dusra_description/urdf/: materials.xacro  sabse_final_robo_dusra.gazebo  sabse_final_robo_dusra.gazebo_ros2_control.xacro  sabse_final_robo_dusra.trans  sabse_final_robo_dusra.xacro  urdf_back.txt
sabse_final_robo_dusra_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sabse_final_robo_dusra_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sabse_final_robo_dusra.srdf  sabse_final_robo_dusra.urdf.xacro
sabse_final_robo_dusra_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
