<?xml version="1.0"?>
<package format="3">
  <name>arm_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 configuration for your robot</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>
  <depend>ros2_controllers</depend>
  <depend>moveit_configs_utils</depend>
  <depend>chomp_motion_planner</depend>
  <depend>pilz_industrial_motion_planner</depend>
  <depend>sabse_final_robo_dusra_description</depend>
  
  <!-- New dependencies for Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>